; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_cafe_ccic.c_cafe_reg_write_mask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_cafe_ccic.c_cafe_reg_write_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cafe_camera = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cafe_camera*, i32, i32, i32)* @cafe_reg_write_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cafe_reg_write_mask(%struct.cafe_camera* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.cafe_camera*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.cafe_camera* %0, %struct.cafe_camera** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.cafe_camera*, %struct.cafe_camera** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @cafe_reg_read(%struct.cafe_camera* %10, i32 %11)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = load i32, i32* %8, align 4
  %15 = xor i32 %14, -1
  %16 = and i32 %13, %15
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = and i32 %17, %18
  %20 = or i32 %16, %19
  store i32 %20, i32* %9, align 4
  %21 = load %struct.cafe_camera*, %struct.cafe_camera** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %9, align 4
  %24 = call i32 @cafe_reg_write(%struct.cafe_camera* %21, i32 %22, i32 %23)
  ret void
}

declare dso_local i32 @cafe_reg_read(%struct.cafe_camera*, i32) #1

declare dso_local i32 @cafe_reg_write(%struct.cafe_camera*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
